modules/gdscript/tests/scripts/analyzer/errors/function_param_type_invalid_contravariance_2.gd
class A:
	func f(_p: Variant):
		pass

class B extends A:
	func f(_p: Node): # No `is_type_compatible()` misuse.
		pass

func test():
	pass
